...
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".ui.auth.RegisterActivity">

    <!--Toolbar-->
    <include
        android:id="@+id/toolbar_register"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Placeholder for register image-->
    <ImageView
        android:id="@+id/image_view_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Display name-->
            <EditText
                android:id="@+id/edit_text_register_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_display_name"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--E-mail-->
            <EditText
                android:id="@+id/edit_text_register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_email"
...
                app:layout_constraintEnd_toEndOf="@+id/edit_text_register_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_register_display_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_register_display_name" />

            <!--Password-->
            <EditText
                android:id="@+id/edit_text_register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_password"
...
                app:layout_constraintEnd_toEndOf="@+id/edit_text_register_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_register_display_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_register_email" />

            <!--Confirm Password-->
            <EditText
                android:id="@+id/edit_text_register_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_confirm_password"
...
                app:layout_constraintEnd_toEndOf="@+id/edit_text_register_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_register_display_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_register_password" />

            <!--Register button-->
            <Button
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round"
                android:text="@string/button_register"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_register_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_register_display_name"
                app:layout_constraintTop_toBottomOf="@id/edit_text_register_confirm_password" />

            <!--Registration progress-->
            <ProgressBar
                android:id="@+id/progress_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_register_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_register_display_name"
                app:layout_constraintTop_toBottomOf="@id/button_register"
...
