...
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!--E-mail-->
    <EditText
        android:id="@+id/edit_text_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_email"
...
